# ZPLC

./: .clangd  .dockerignore  .gitignore  404.html  AGENTS.md  CMakeLists.txt  GEMINI.md  Makefile  QUICKSTART_AGENTS.md  README.md  TECHNICAL_SPEC.md  agent.md  debug_hil.py  debug_hil_minimal.py  debug_mem.py  fix.sed  index.html  justfile  package.json  sitemap.xml  test-tags.st  test_compiler.ts  test_tags_binary.ts  test_timer.asm  tmp_hil_smoke.st  upload.py  validate_bsp.sh
apps/posix_host/: CMakeLists.txt
apps/zephyr_app/: CMakeLists.txt  README.md  prj.conf
apps/zephyr_app/boards/: arduino_giga_r1_stm32h747xx_m7.overlay  esp32s3_devkitc_esp32s3_procpu.overlay  nucleo_h743zi.overlay  rpi_pico_rp2040.conf  rpi_pico_rp2040.overlay
apps/zephyr_app/src/: main.c  shell_cmds.c
firmware/app/: CMakeLists.txt  CMakeLists_tests.txt  Kconfig  README.md  app.overlay  prj.conf
firmware/app/boards/: arduino_giga_r1_stm32h747xx_m7.conf  arduino_giga_r1_stm32h747xx_m7.overlay  esp32s3_devkitc_esp32s3_procpu.conf  esp32s3_devkitc_esp32s3_procpu.overlay  nucleo_h743zi.conf  nucleo_h743zi.overlay  rpi_pico_rp2040.conf  rpi_pico_rp2040.overlay  stm32f746g_disco.conf  stm32f746g_disco.overlay  supported-boards.v1.5.0.json  waveshare_rp2040_zero.conf  waveshare_rp2040_zero.overlay
firmware/app/build_disco/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  build_info.yml  cmake_install.cmake  sysbuild_modules.txt  zephyr_modules.txt  zephyr_settings.txt
firmware/app/build_disco/Kconfig/: Kconfig.modules
firmware/app/build_disco/Kconfig/arch/: Kconfig
firmware/app/build_disco/Kconfig/boards/: Kconfig  Kconfig.defconfig  Kconfig.stm32f746g_disco  Kconfig.sysbuild
firmware/app/build_disco/Kconfig/soc/: Kconfig.defconfig  Kconfig.sysbuild
firmware/app/build_disco/modules/acpica/: cmake_install.cmake
firmware/app/build_disco/modules/adi/: cmake_install.cmake
firmware/app/build_disco/modules/atmel/: cmake_install.cmake
firmware/app/build_disco/modules/cmsis/: cmake_install.cmake
firmware/app/build_disco/modules/cmsis-dsp/: cmake_install.cmake
firmware/app/build_disco/modules/cmsis-nn/: cmake_install.cmake
firmware/app/build_disco/modules/cmsis_6/: cmake_install.cmake
firmware/app/build_disco/modules/fatfs/: cmake_install.cmake
firmware/app/build_disco/modules/hal_afbr/: cmake_install.cmake
firmware/app/build_disco/modules/hal_ambiq/: cmake_install.cmake
firmware/app/build_disco/modules/hal_bouffalolab/: cmake_install.cmake
firmware/app/build_disco/modules/hal_espressif/: cmake_install.cmake
firmware/app/build_disco/modules/hal_ethos_u/: cmake_install.cmake
firmware/app/build_disco/modules/hal_gigadevice/: cmake_install.cmake
firmware/app/build_disco/modules/hal_infineon/: cmake_install.cmake
firmware/app/build_disco/modules/hal_intel/: cmake_install.cmake
firmware/app/build_disco/modules/hal_nordic/: cmake_install.cmake
firmware/app/build_disco/modules/hal_nxp/: cmake_install.cmake
firmware/app/build_disco/zephyr/: .cmake.dotconfig.checksum  .config  .config-trace.json  .config-trace.pickle  .config.old  cmake_install.cmake  edt.pickle  edt.pickle.cmake.new  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  runners.yaml  syscall_weakdefs_llext.c  zephyr.dts  zephyr.dts.d  zephyr.dts.pre  zephyr.hex  zephyr.stat  zephyr_final.map  zephyr_pre0.map
firmware/app/build_esp32s3/: .ninja_deps  .ninja_log  CMakeCache.txt  build_info.yml  build_info.yml.bak  cmake_install.cmake
firmware/app/build_esp32s3/Kconfig/: Kconfig.modules
firmware/app/build_esp32s3/proto/: sparkplug_b.pb.c  sparkplug_b.pb.h
firmware/app/build_esp32s3/zephyr/: .cmake.dotconfig.checksum  .config  .config-trace.json  .config-trace.pickle  cmake_install.cmake  edt.pickle  edt.pickle.cmake.new  isr_tables.c  linker.cmd.dep  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  runners.yaml  syscall_weakdefs_llext.c  zephyr.dts  zephyr.dts.d  zephyr.dts.pre  zephyr.stat
firmware/app/build_giga/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  build_info.yml  build_info.yml.bak  cmake_install.cmake
firmware/app/build_giga/Kconfig/: Kconfig.modules  kconfig_module_dirs.cmake
firmware/app/build_giga/zephyr/: .cmake.dotconfig.checksum  .config  .config-trace.json  .config-trace.pickle  cmake_install.cmake  edt.pickle  edt.pickle.cmake.new  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  runners.yaml  snippets_generated.cmake  syscall_weakdefs_llext.c  zephyr.dts  zephyr.dts.d  zephyr.dts.pre
firmware/app/build_tests/: CMakeCache.txt
firmware/app/build_verify_esp32s3/: .ninja_deps  .ninja_log  CMakeCache.txt  build_info.yml  build_info.yml.bak  cmake_install.cmake
firmware/app/build_verify_esp32s3/Kconfig/: Kconfig.sysbuild.modules  kconfig_module_dirs.env
firmware/app/build_verify_esp32s3/zephyr/: .cmake.dotconfig.checksum  .config  .config-trace.json  .config-trace.pickle  cmake_install.cmake  edt.pickle  edt.pickle.cmake.new  linker.cmd  linker.cmd.dep  linker_zephyr_pre0.cmd.dep  zephyr.dts  zephyr.dts.pre  zephyr.stat
firmware/app/include/: zplc_azure_sas.h  zplc_comm_cloud_handler.h  zplc_comm_modbus_handler.h  zplc_comm_mqtt_handler.h  zplc_config.h  zplc_mqtt.h  zplc_platform_attrs.h  zplc_time.h
firmware/app/proto/: sparkplug_b.options  sparkplug_b.proto
firmware/app/src/: main.c  shell_cmds.c  zplc_aws_fleet.c  zplc_azure_dps.c  zplc_azure_sas.c  zplc_comm_cloud_handler.c  zplc_comm_modbus_handler.c  zplc_comm_modbus_handler.h  zplc_comm_mqtt_handler.c  zplc_comm_mqtt_handler.h  zplc_config.c  zplc_modbus.c  zplc_modbus_client.c  zplc_mqtt.c  zplc_time.c
firmware/app/tests/: CMakeLists.txt  test_encode_sparkplug_payload.c
firmware/lib/zplc_core/: CMakeLists.txt
firmware/lib/zplc_core/include/: zplc_comm_dispatch.h  zplc_core.h  zplc_debug.h  zplc_hal.h  zplc_isa.h  zplc_loader.h  zplc_scheduler.h
firmware/lib/zplc_core/tests/: test_comm_dispatch.c  test_hal_posix_persist.c  test_host_stdio.c  test_isa.c  test_native_runtime_session.c  test_vm_core.c
(+1964 files in other folders)
